PARQUET-2458: Use --release 8 with java compiler
Update maven-compiler-plugin to 3.13.0 version and use
`maven.compiler.release` property instead of
`maven.compiler.{source|target}` to set which Java version to target.

Also remove argLine configuration entry from the plugin
- argLine is not a valid option (it's compilerArgs)
- XX:MaxPermSize has been ignored since java 8